add some font features for display (size, flex display, text align)

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ body{
     margin-top: 5%;
     border-radius: 5%;
     background-color:lightsteelblue;
+    font-size: 7vh;
+    text-align: center;
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .keysHolder{
