--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     align-items: center;
     border-radius: 5%;
     border: 1px solid black;
+    box-shadow: 10px 10px 10px 10px rgb(212, 117, 117);
     
 }
 
@@ -34,6 +35,7 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     justify-content: center;
     align-items: center;
+    box-shadow: inset 0 -3em 3em rgba(7, 71, 90, 0.3);
 }
 
 .keysHolder{
@@ -54,3 +56,7 @@ body{
     
 }
 
+
+button:active{
+    box-shadow: inset 0 -3em 3em rgba(216, 150, 181, 0.3);
+}
